force-app/force-app/main/default/objects/Account/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Account Number - Sertifi #13; Requires Shield or strict FLS</description>
    <label>Account Number</label>
    <required>true</required>
    <type>Text</type>
    <length>20</length>
</CustomField>