force-app/force-app/main/default/objects/Account/fields/Bank_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Bank_Contact_Person__c</fullName>
    <description>Bank Contact Person - Bank relationship contact</description>
    <label>Bank Contact Person</label>
    <type>Text</type>
    <length>100</length>
</CustomField>