force-app/force-app/main/default/objects/Account/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <description>Bank Name - Sertifi #12; Business banking</description>
    <label>Bank Name</label>
    <required>true</required>
    <type>Text</type>
    <length>100</length>
</CustomField>