force-app/force-app/main/default/objects/Account/fields/Business_Description__c.field-meta.xml
<CustomField>
    <fullName>Business_Description__c</fullName>
    <description>Business Description - What company does/sells</description>
    <label>Business Description</label>
    <type>Text</type>
    <length>5000</length>
</CustomField>