force-app/force-app/main/default/objects/Account/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <description>Business Entity Type - Sertifi #7; LLC, Corp, Sole Prop, Partnership, etc.</description>
    <label>Business Entity Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business_Entity_Type_GVS</fullName>
                <default>true</default>
                <label>Business_Entity_Type_GVS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>