force-app/force-app/main/default/objects/Account/fields/CRM_Software__c.field-meta.xml
<CustomField>
    <fullName>CRM_Software__c</fullName>
    <description>CRM Software - What CRM system used</description>
    <label>CRM Software</label>
    <type>Text</type>
    <length>100</length>
</CustomField>