force-app/force-app/main/default/objects/Account/fields/Current_MID__c.field-meta.xml
<CustomField>
    <fullName>Current_MID__c</fullName>
    <description>Current MID Number - Sertifi #11; Current merchant ID</description>
    <label>Current MID Number</label>
    <type>Text</type>
    <length>30</length>
</CustomField>