force-app/force-app/main/default/objects/Account/fields/Current_Processor__c.field-meta.xml
<CustomField>
    <fullName>Current_Processor__c</fullName>
    <description>Current Processor - Sertifi #10; Current payment processor</description>
    <label>Current Processor</label>
    <type>Text</type>
    <length>100</length>
</CustomField>