force-app/force-app/main/default/objects/Account/fields/Customer_Market_Region__c.field-meta.xml
<CustomField>
    <fullName>Customer_Market_Region__c</fullName>
    <description>Customer Market Region - Where customers are located</description>
    <label>Customer Market Region</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Region_GVS</fullName>
                <default>true</default>
                <label>Region_GVS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>