force-app/force-app/main/default/objects/Account/fields/DBA__c.field-meta.xml
<CustomField>
    <fullName>DBA__c</fullName>
    <description>DBA Name - Trade name if different from legal</description>
    <label>DBA Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>