force-app/force-app/main/default/objects/Account/fields/Fulfillment_Company__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Company__c</fullName>
    <description>Fulfillment Company - Third-party fulfillment partner</description>
    <label>Fulfillment Company</label>
    <type>Text</type>
    <length>100</length>
</CustomField>