force-app/force-app/main/default/objects/Account/fields/Incorporation_Country__c.field-meta.xml
<CustomField>
    <fullName>Incorporation_Country__c</fullName>
    <description>Incorporation Country - Country of business registration</description>
    <label>Incorporation Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Country_GVS</fullName>
                <default>true</default>
                <label>Country_GVS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>