force-app/force-app/main/default/objects/Account/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <description>Number of Employees - Company size</description>
    <label>Number of Employees</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>