force-app/force-app/main/default/objects/Account/fields/Number_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Locations__c</fullName>
    <description>Number of Locations - Physical locations</description>
    <label>Number of Locations</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>