force-app/force-app/main/default/objects/Account/fields/Payment_Gateway_Preference__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway_Preference__c</fullName>
    <description>Payment Gateway Preference - Preferred gateway</description>
    <label>Payment Gateway Preference</label>
    <type>Text</type>
    <length>100</length>
</CustomField>