force-app/force-app/main/default/objects/Account/fields/PCI_Compliant__c.field-meta.xml
<CustomField>
    <fullName>PCI_Compliant__c</fullName>
    <description>PCI Compliant - PCI DSS compliance status</description>
    <label>PCI Compliant</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>