force-app/force-app/main/default/objects/Account/fields/PCI_Level__c.field-meta.xml
<CustomField>
    <fullName>PCI_Level__c</fullName>
    <description>PCI Level - PCI compliance level</description>
    <label>PCI Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
                <default>true</default>
                <label>Level 1</label>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>Level 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>