force-app/force-app/main/default/objects/Account/fields/Processing_Since_Date__c.field-meta.xml
<CustomField>
    <fullName>Processing_Since_Date__c</fullName>
    <description>Processing Since Date - When started with current processor</description>
    <label>Processing Since Date</label>
    <type>Date</type>
</CustomField>