force-app/force-app/main/default/objects/Account/fields/Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Routing_Number__c</fullName>
    <description>Routing Number - Sertifi #14; Bank routing number</description>
    <label>Routing Number</label>
    <required>true</required>
    <type>Text</type>
    <length>15</length>
</CustomField>