force-app/force-app/main/default/objects/Account/fields/Settlement_Country__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Country__c</fullName>
    <description>Settlement Country - Where funds settle</description>
    <label>Settlement Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Country_GVS</fullName>
                <default>true</default>
                <label>Country_GVS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>