force-app/force-app/main/default/objects/Account/fields/Shopping_Cart_Platform__c.field-meta.xml
<CustomField>
    <fullName>Shopping_Cart_Platform__c</fullName>
    <description>Shopping Cart Platform - E-commerce platform</description>
    <label>Shopping Cart Platform</label>
    <type>Text</type>
    <length>100</length>
</CustomField>