force-app/force-app/main/default/objects/Account/fields/State_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>State_of_Incorporation__c</fullName>
    <description>State of Incorporation - Where business is registered</description>
    <label>State of Incorporation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US_States_GVS</fullName>
                <default>true</default>
                <label>US_States_GVS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>