force-app/force-app/main/default/objects/Account/fields/Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID__c</fullName>
    <description>Federal Tax ID (EIN) - Sertifi #3; Requires Shield or strict FLS</description>
    <label>Federal Tax ID (EIN)</label>
    <required>true</required>
    <type>Text</type>
    <length>15</length>
</CustomField>