force-app/force-app/main/default/objects/Account/fields/Years_In_Business__c.field-meta.xml
<CustomField>
    <fullName>Years_In_Business__c</fullName>
    <description>Years in Business - How long operating</description>
    <label>Years in Business</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>